fix(showcase): Removed icon from email banner on tablet, changed profile inline tablet styles to match desktop

--- a/src/sass/modules/email-banner.scss
+++ b/src/sass/modules/email-banner.scss
@@ -65,6 +65,10 @@
 
             .button-primary {
                 @extend .grid-30;
+                
+                @media #{$tablet} {
+                    min-width: 30%;
+                }
             }
         }
     }
